--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </center>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit aperiam ipsam eveniet consequuntur saepe quam repellat laboriosam? Vero facere voluptatum voluptatibus quam soluta nostrum, debitis corporis, provident iste officiis quaerat!</p>
         <center>
-        <img src="img/event1.png">
+        <img src="event1.png">
         <h1>Photo Gallery Event</h1>
         <h2>Free Entry|Free Food|Pets are Not Allowed</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis doloribus voluptate perferendis ab fugit, ad quis aliquid! Adipisci eaque porro reiciendis sapiente aut cupiditate autem, consectetur fuga sequi? Reiciendis aspernatur illum quod pariatur, corporis enim quis laboriosam porro nesciunt! Modi tempore vel error nobis velit alias saepe sit ratione vero.</p>
-        <img src="img/event2.png">
+        <img src="event2.png">
         <h1>
            <a href="https://www.meesho.com/">Fashion Stroe</a>
 
